--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ uuid = { version = "1.11.0", features = ["v4"] }
 anyhow = "1.0.95"
 serde_yaml = "0.9.34"
 thiserror = "2.0.10"
-tool = { git = "https://github.com/Zzaniu/tool-rs", features = ["serialize", "sre_breaker"], tag = "0.1.7" }
+tool = { git = "https://github.com/Zzaniu/tool-rs", features = ["sre_breaker"], tag = "0.1.7" }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 chrono = "0.4.39"
@@ -22,7 +22,6 @@ dashmap = "6.1.0"
 
 [dev-dependencies]
 prost = "0.13.4"
-tonic-build = "0.12.3"
 
 
 [[example]]
